# simple-bmi-calc

./: LICENSE  README.md  main.py  pyproject.toml  setup.py  tea.yaml
.github/: dependabot.yml
program/: __init__.py
